# QDoro

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md  rsc.qrc
patches/: wintoast_fix.patch
qml/: Main.qml
qml/Dashboard/: PomodoroTimer.qml
qml/Dashboard/Components/: TodoList.qml
src/: main.cpp  trayicon.cpp  trayicon.h
